# cudock

./: CMakeLists.txt  README.md
data/: 10gs_protein_pocket1.csv
include/: docker.hpp  ligand.hpp  parser.hpp  parsing.hpp  pocket.hpp  scoring.hpp  swizzling.cuh  utils.cuh  vec3.hpp
src/: docker.cpp  docker.cu  ligand.cpp  main.cpp  parser.cpp  parsing.cpp  pocket.cpp  pocket.cu  scoring.cpp  swizzling.cu
